<resources>
    <string name="app_name">Perpus Online</string>
    <string name="book_cover">Book Cover</string>
    <string name="view_all_request">View All Request</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="agreement">Agreement</string>
</resources>