<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/ed_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/ed_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/ed_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:autofillHints="phone"
        android:hint="@string/phone_number" />

    <TextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth" />

    <CheckBox
        android:id="@+id/cb_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>